# Fastapi-Template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: main.py  web.py
app/alembic/: env.py
app/alembic/versions/: 2025_09_19_1946-cda7d0878abb_init_tables.py  2025_09_26_0851-9d538fba92b0_add_main_tables.py
app/api/: routes.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  user.py
app/api/v2/: __init__.py  router.py
app/core/: auth.py  config.py  constants.py  db.py  exceptions.py  field_sizes.py  logger.py  responses.py  types.py  utils.py
app/core/exceptions/: apple_pay.py  back_blaze_exceptions.py  base.py  domain.py  firebase_exceptions.py  gcs_exceptions.py  http_exceptions.py  rate_limiter.py
app/middleware/: csrf.py  logging.py  rate_limit.py  security_headers.py
app/models/: base.py  user.py
app/repos/: __init__.py  base.py  user.py
app/schemas/: __init__.py  apple_pay.py  base.py  firebase.py  google_bucket.py  health_check.py  token.py  user.py
app/services/: auth_service.py  back_blaze_b2.py  firebase.py  firestore.py  gcs.py
app/services/cache/: __init__.py  base.py  decorators.py  manager.py  rate_limiter.py  token_blacklist.py
app/services/email/: base.py  brevo.py  resend.py
app/services/email/static/: welcome.html
app/services/exceptions/: __init__.py  auth.py  base.py  email.py
app/services/payments/: apple_pay.py
app/services/task_queue/: __init__.py  celery_config.py
app/services/task_queue/tasks/: __init__.py  user_tasks.py
app/services/types/: __init__.py  auth.py  email.py
docs/: README.md  api.md  architecture.md  backend-architecture.md  deployment.md  development.md  llms.txt
docs/api/: reference.md
docs/architecture/: overview.md
docs/architecture/decisions/: 001-initial-architecture.md  _template.md
docs/changelog/: CHANGELOG.md
docs/guides/: contributing.md  deployment.md  development.md  getting-started.md
docs/runbooks/: incident-response.md
docs/strategy/: decisions-log.md  roadmap.md  vision.md
scripts/: alembic.sh
tests/: conftest.py  main_test.py  schemas.py  utils.py  web_test.py
tests/api/v1/endpoints/: auth_test.py  logout_test.py
tests/core/: db_test.py  logger_test.py  utils_test.py
tests/core/exceptions/: http_exceptions_test.py
tests/endpoints/v1/: auth_test.py
tests/middleware/: csrf_test.py  logging_test.py  security_headers_test.py
tests/models/: base_model_test.py
tests/repos/: base_repo_test.py
tests/services/: back_blaze_b2_test.py  conftest.py  firebase_test.py  firestore_test.py  gcs_test.py
tests/services/cache/: base_test.py  decorators_test.py  manager_test.py  rate_limiter_test.py  token_blacklist_test.py
tests/services/email/: brevo_test.py  email_base_test.py  email_types_test.py  resend_test.py
tests/services/payments/: apple_pay_part1_test.py  apple_pay_part2_test.py  apple_pay_part3_test.py  apple_pay_part4_test.py  conftest.py
