[project]
name = "FastApi-Template"
version = "0.1.0"
description = "A FastAPI project template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "black>=25.9.0",
    "email-validator>=2.3.0",
    "fastapi>=0.116.2",
    "gunicorn>=23.0.0",
    "httptools>=0.6.4 ; sys_platform == 'linux'",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.43",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.35.0",
    "uvloop>=0.21.0 ; sys_platform == 'linux'",
    "yarl>=1.20.1",
]

[dependency-groups]
test = [
    "faker>=37.8.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
security = [
    "bandit>=1.8.6",
]

[tool.black]
line-length = 100
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
    | .*/__init__.py
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 100
use_parentheses = true
ensure_newline_before_comments = true
remove_redundant_aliases = true
combine_as_imports = true
combine_star = true
skip_glob = [
    "*/__init__.py",
    "**/__pycache__/*",
    ".venv/*",
    "venv/*",
    "env/*"
]
skip = [
    ".gitignore",
    ".dockerignore",
    ".env",
    ".venv",
    "venv",
    "env",
    "__init__.py",
]
extend_skip = [".md", ".json"]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = ["."]
addopts = """
    --strict-markers
    --tb=short
    --cov=app
    --cov-report=term-missing
    --no-cov-on-fail
"""
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running tests",
    "websocket: marks tests that use websocket connections"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
